--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
+body{
+    margin: 0 !important;
+    font-family: "Open Sans", Arial , sans-serif;
+    background-color: #313940;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+    text-align: center;
+    width: 100%;
+    border-bottom: 1px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to left, #38495a, #a2abb3, #38495a);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title{
+    line-height: 60px;
+    font-weight: 10 !important;
+    color: #fff;
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    font-family: "Open Sans", Arial , sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-container {
+    display: flex;
+    justify-content: space-between;
+    width: 306px;
+    height: 40px;
+    margin: 0 auto;
+    padding: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+    width: 150px;
+    height: 40px;
+    padding: 0 10px;
+    background-color: #454c53;
+    border: 0;
+    border-radius: 2px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: #fff;
+    outline: 0;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-active {
+    background-color: #00b4a4;
 }
